--- a/tr/LC_MESSAGES/gamestats.po
+++ b/tr/LC_MESSAGES/gamestats.po
@@ -1,4 +1,4 @@
-# Chinese translations for GameStats.
+# Turkish translations for GameStats.
 # Copyright (C) 2017 GameStats
 # This file is distributed under the same license as the GameStats project.
 # https://github.com/Avaren, 2017.
@@ -8,10 +8,10 @@ msgstr ""
 "Project-Id-Version: GameStats 0.1\n"
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
 "POT-Creation-Date: 2017-08-12 12:49+0100\n"
-"PO-Revision-Date: 2017-08-12 12:56+0100\n"
-"Last-Translator: Viola#5458\n"
-"Language: zh\n"
-"Language-Team: zh <LL@li.org>\n"
+"PO-Revision-Date: 2017-08-12 12:53+0100\n"
+"Last-Translator: https://github.com/Avaren\n"
+"Language: tr\n"
+"Language-Team: tr <LL@li.org>\n"
 "Plural-Forms: nplurals=1; plural=0\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
