--- a/tr/LC_MESSAGES/gamestats.po
+++ b/tr/LC_MESSAGES/gamestats.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/Avaren/gamestats-locale\n"
 "POT-Creation-Date: 2017-08-12 12:49+0100\n"
 "PO-Revision-Date: 2017-08-12 12:53+0100\n"
-"Last-Translator: https://github.com/Avaren\n"
+"Last-Translator: 🅐glaïs#2150n"
 "Language: tr\n"
 "Language-Team: tr <LL@li.org>\n"
 "Plural-Forms: nplurals=1; plural=0\n"
