--- a/de/LC_MESSAGES/gamestats.po
+++ b/de/LC_MESSAGES/gamestats.po
@@ -25,7 +25,7 @@ msgid "A {platforms} account is required to obtain {game} stats"
 msgstr ""
 
 msgid "Available languages: [{languages}]"
-msgstr ""
+msgstr "Verfügbare Sprachen: [{languages}]"
 
 msgid "Check your DMs"
 msgstr ""
@@ -37,16 +37,16 @@ msgid "I tried to DM you {mention} but you have DMs disabled, please DM me that 
 msgstr ""
 
 msgid "Languages reloaded"
-msgstr ""
+msgstr "Sprachen aktualisiert"
 
 msgid "Looking up {user} on {game} on {platform}..."
-msgstr ""
+msgstr "Suche {user} in {game} in {platform}..."
 
 msgid "Looking up {user} on {game}..."
-msgstr ""
+msgstr "Suche {user} in {game}..."
 
 msgid "No response from user."
-msgstr ""
+msgstr "Keine Antwort vom Benutzer."
 
 msgid "No {game} players found on this server. Do {prefix}{game_key} first."
 msgstr ""
@@ -55,7 +55,7 @@ msgid "Please enter your account name for {game}:"
 msgstr ""
 
 msgid "Please enter your {game} account name:"
-msgstr ""
+msgstr "Bitte gib deinen {game} Kontonamen ein:"
 
 msgid ""
 "Profile created. To add accounts use {prefix}add <account>\n"
@@ -63,7 +63,7 @@ msgid ""
 msgstr ""
 
 msgid "Set language for {guild_name} to {language}"
-msgstr ""
+msgstr "Setze Sprache für {guild_name} auf {language}"
 
 msgid "Shows your stats from {game}"
 msgstr ""
@@ -87,13 +87,13 @@ msgid ""
 msgstr ""
 
 msgid "That user hasn't added an account for {game}"
-msgstr ""
+msgstr "Dieser Benutzer hat für {game} kein Konto hinzugefügt"
 
 msgid "That was not a valid choice. You have {tries} more tries."
 msgstr ""
 
 msgid "That's not a valid platform, the options are: {platforms}"
-msgstr ""
+msgstr "Das ist keine zulässige Platform, möglich sind: {platforms}"
 
 msgid "There are multiple matches. Please clarify by replying with the number of the correct choice?"
 msgstr ""
@@ -102,7 +102,7 @@ msgid "Warning: You have multiple accounts for {game} you might want to delete o
 msgstr ""
 
 msgid "What platform do you play {game} on? [{platforms}]"
-msgstr ""
+msgstr "Auf welcher Platform spielst du {game}? [{platforms}]"
 
 msgid "You do not have permission to change the language on {guild}."
 msgstr ""
@@ -120,13 +120,13 @@ msgid "You have not yet set up a profile, do {prefix}profile to get started."
 msgstr ""
 
 msgid "You need to add an account for {game}, do {prefix}add {game_key}"
-msgstr ""
+msgstr "Du musst für {game} ein Konto hinzufügen, schreib {prefix}add {game_key}"
 
 msgid "{game} Leaderboard for {guild}"
 msgstr ""
 
 msgid "{game} account not found for {user}"
-msgstr ""
+msgstr "Kein {game} Konto gefunden für {user}"
 
 msgid "{game} account not found for {user} on {platform}"
 msgstr ""
@@ -135,8 +135,8 @@ msgid "{language_key} removed from available languages, which are: [{languages}]
 msgstr ""
 
 msgid "{language} added to list of available languages, which are: [{languages}]"
-msgstr ""
+msgstr "{language} zur Liste verfügbarer Sprachen hinzugefügt: [{languages}]"
 
 msgid "{language} not in list of available languages: {languages}"
-msgstr ""
+msgstr "{language} ist nicht in der Liste verfügbarer Sprachen: {languages}"
 
